--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'French fiction -- 19th century'
+- GITenberg
 title: Mademoiselle de Maupin
 url: http://www.gutenberg.org/ebooks/14288
